tests/negative/modules/fixtures/import_syntax_error_helper.tx
export function broken(): int {
    let value = ;
    return value;
}
